--- a/EasyLib_Librarian/app/src/main/res/layout-xlarge/login.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-xlarge/login.xml
@@ -32,6 +32,7 @@
         android:fontFamily="sans-serif-medium"
         android:hint="Email"
         android:inputType="textPersonName"
+        android:imeOptions="actionSend"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
@@ -85,7 +86,7 @@
         android:id="@+id/login_load_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +122,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Login"
+            android:text="Loading"
             android:textColor="@android:color/white"
             android:textSize="36sp"
             android:textStyle="bold|italic"
