--- a/EasyLib_Librarian/app/src/main/res/layout-xlarge/library.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-xlarge/library.xml
@@ -22,6 +22,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -54,6 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:gravity="center|center_horizontal|center_vertical"
                 android:orientation="horizontal">
 
                 <com.makeramen.roundedimageview.RoundedImageView
@@ -62,6 +64,7 @@
                     android:layout_height="250dp"
                     android:layout_marginStart="55dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
                     android:layout_marginEnd="55dp"
                     android:layout_weight="0"
                     app:riv_corner_radius="10dp" />
@@ -238,6 +241,16 @@
                     android:layout_marginTop="16dp"
                     android:text="All Books" />
             </LinearLayout>
+
+            <Button
+                android:id="@+id/library_activity_logout_button"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="24dp"
+                android:onClick="logout"
+                android:text="LOGOUT"
+                android:textSize="22sp" />
 
         </LinearLayout>
     </ScrollView>
