--- a/EasyLib_Librarian/app/src/main/res/layout-xlarge-land/book_activity.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-xlarge-land/book_activity.xml
@@ -7,7 +7,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
@@ -54,6 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="16dp"
+                android:layout_marginRight="8dp"
                 android:gravity="center|center_horizontal|center_vertical"
                 android:orientation="horizontal">
 
@@ -61,62 +62,69 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.6"
-                    android:gravity="center|center_horizontal|center_vertical"
                     android:orientation="vertical">
 
-                    <FrameLayout
+                    <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0">
 
-                        <com.makeramen.roundedimageview.RoundedImageView
-                            android:id="@+id/book_activity_image"
-                            android:layout_width="200dp"
-                            android:layout_height="250dp"
-                            android:layout_marginStart="200dp"
-                            android:layout_marginTop="16dp"
-                            android:layout_marginEnd="55dp"
-                            app:riv_corner_radius="10dp" />
-
-                        <LinearLayout
-                            android:layout_width="40dp"
-                            android:layout_height="25dp"
-                            android:layout_marginStart="200dp"
-                            android:layout_marginTop="235dp"
-                            android:layout_marginEnd="55dp"
-                            android:orientation="horizontal"
+                        <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent">
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
 
-                            <TextView
-                                android:id="@+id/book_activity_average_rate"
-                                android:layout_width="wrap_content"
-                                android:layout_height="25dp"
-                                android:layout_weight="3"
-                                android:fontFamily="monospace"
-                                android:text="0"
-                                android:textAlignment="center"
-                                android:textColor="@color/colorYellow"
-                                android:textSize="20sp" />
+                            <com.makeramen.roundedimageview.RoundedImageView
+                                android:id="@+id/book_activity_image"
+                                android:layout_width="200dp"
+                                android:layout_height="250dp"
+                                app:riv_corner_radius="10dp" />
 
-                            <ImageView
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:layout_marginTop="3dp"
-                                android:layout_weight="1"
-                                android:scaleType="fitCenter"
-                                app:srcCompat="@drawable/ic_star" />
-                        </LinearLayout>
-                    </FrameLayout>
+                            <LinearLayout
+                                android:layout_width="70dp"
+                                android:layout_height="32dp"
+                                android:layout_marginStart="110dp"
+                                android:layout_marginTop="200dp"
+                                android:background="@drawable/round_rect_shadow"
+                                android:orientation="horizontal"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent">
+
+                                <TextView
+                                    android:id="@+id/book_activity_average_rate"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="8dp"
+                                    android:layout_weight="1"
+                                    android:fontFamily="monospace"
+                                    android:text="0"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/colorDarkBlueTransparent"
+                                    android:textSize="20sp" />
+
+                                <ImageView
+                                    android:layout_width="20dp"
+                                    android:layout_height="20dp"
+                                    android:layout_marginTop="3dp"
+                                    android:layout_weight="1"
+                                    android:scaleType="fitCenter"
+                                    app:srcCompat="@drawable/ic_star" />
+                            </LinearLayout>
+                        </FrameLayout>
+                    </android.support.constraint.ConstraintLayout>
 
                     <TextView
                         android:id="@+id/book_activity_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="32dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="24dp"
                         android:layout_marginRight="32dp"
-                        android:layout_weight="0.4"
+                        android:layout_weight="0"
                         android:text="Description"
                         android:textAlignment="center"
                         android:textSize="24sp" />
@@ -126,6 +134,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="8dp"
                     android:layout_weight="0.6"
                     android:orientation="vertical">
 
