--- a/EasyLib_Librarian/app/src/main/res/layout-normal/book_activity_reservation_item.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-normal/book_activity_reservation_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -8,8 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="8dp"
-        android:orientation="horizontal"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,18 +18,69 @@
 
         <TextView
             android:id="@+id/book_activity_reservation_item_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:layout_weight="1"
+            android:paddingTop="10dp"
             android:singleLine="true"
-            android:text="TextView"
-            android:textAlignment="center" />
+            android:text="USER ID"
+            android:textAlignment="center"
+            android:textSize="22sp" />
 
-        <Button
-            android:id="@+id/book_activity_reservation_item_button"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Reserve" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_weight="1">
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <Button
+                    android:id="@+id/book_activity_reservation_item_returned_button"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    android:layout_width="350dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Returned"
+                    android:textColor="@android:color/holo_green_light"
+                    android:textSize="18sp"
+                    android:visibility="invisible" />
+
+                <LinearLayout
+                    android:id="@+id/book_activity_reservation_item_reservation_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/book_activity_reservation_item_reserve_button"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        android:layout_width="175dp"
+                        android:layout_height="wrap_content"
+                        android:text="Reserve"
+                        android:textColor="@android:color/holo_green_light"
+                        android:textSize="18sp"
+                        android:visibility="visible" />
+
+                    <Button
+                        android:id="@+id/book_activity_reservation_item_remove_button"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        android:layout_width="175dp"
+                        android:layout_height="wrap_content"
+                        android:text="Remove"
+                        android:textColor="@android:color/holo_red_light"
+                        android:textSize="18sp"
+                        android:visibility="visible" />
+                </LinearLayout>
+            </FrameLayout>
+        </android.support.constraint.ConstraintLayout>
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
