--- a/EasyLib_Librarian/app/src/main/res/layout-normal/book_activity_reservation_item.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-normal/book_activity_reservation_item.xml
@@ -57,7 +57,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="invisible">
 
                     <Button
                         android:id="@+id/book_activity_reservation_item_reserve_button"
