--- a/EasyLib_Librarian/app/src/main/res/layout-xlarge-land/book_activity.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-xlarge-land/book_activity.xml
@@ -42,7 +42,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:singleLine="true"
-                android:text="Name Surname"
                 android:textAlignment="center"
                 android:textSize="28sp"
                 android:textStyle="italic"
@@ -117,17 +116,52 @@
                         </FrameLayout>
                     </android.support.constraint.ConstraintLayout>
 
-                    <TextView
-                        android:id="@+id/book_activity_description"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="32dp"
-                        android:layout_marginTop="24dp"
-                        android:layout_marginRight="32dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="0"
-                        android:text="Description"
-                        android:textAlignment="center"
-                        android:textSize="24sp" />
+                        android:layout_marginTop="24dp"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="80dp"
+                            android:layout_weight="0.5"
+                            android:gravity="center|center_vertical"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:text="Available Books"
+                                android:textAlignment="center"
+                                android:textSize="24sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/book_activity_books_num"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:textAlignment="center"
+                                android:textSize="24sp" />
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/book_activity_description"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="32dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginRight="16dp"
+                            android:layout_marginBottom="16dp"
+                            android:layout_weight="0.5"
+                            android:text="Description"
+                            android:textAlignment="center"
+                            android:textSize="24sp" />
+                    </LinearLayout>
 
                 </LinearLayout>
 
