--- a/EasyLib_Librarian/app/src/main/res/layout-xlarge-land/library.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-xlarge-land/library.xml
@@ -75,9 +75,10 @@
                             android:layout_height="250dp"
                             android:layout_marginStart="55dp"
                             android:layout_marginTop="16dp"
-                            android:layout_marginBottom="16dp"
                             android:layout_marginEnd="55dp"
+                            android:layout_marginBottom="16dp"
                             android:layout_weight="0"
+                            android:scaleType="fitXY"
                             app:riv_corner_radius="10dp" />
 
                         <LinearLayout
@@ -103,7 +104,7 @@
                                     android:textAlignment="center"
                                     android:textSize="24sp" />
 
-                                <EditText
+                                <TextView
                                     android:id="@+id/library_activity_phone"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -133,7 +134,7 @@
                                     android:textAlignment="center"
                                     android:textSize="24sp" />
 
-                                <EditText
+                                <TextView
                                     android:id="@+id/library_activity_email"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
