--- a/EasyLib_Librarian/app/src/main/res/layout-xlarge/library.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-xlarge/library.xml
@@ -64,9 +64,10 @@
                     android:layout_height="250dp"
                     android:layout_marginStart="55dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
                     android:layout_marginEnd="55dp"
+                    android:layout_marginBottom="16dp"
                     android:layout_weight="0"
+                    android:scaleType="fitXY"
                     app:riv_corner_radius="10dp" />
 
                 <LinearLayout
@@ -92,7 +93,7 @@
                             android:textAlignment="center"
                             android:textSize="24sp" />
 
-                        <EditText
+                        <TextView
                             android:id="@+id/library_activity_phone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -122,7 +123,7 @@
                             android:textAlignment="center"
                             android:textSize="24sp" />
 
-                        <EditText
+                        <TextView
                             android:id="@+id/library_activity_email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
