--- a/EasyLib/app/src/main/res/layout-normal/book_activity.xml
+++ b/EasyLib/app/src/main/res/layout-normal/book_activity.xml
@@ -114,7 +114,7 @@
                                     android:singleLine="true"
                                     android:text="0"
                                     android:textAlignment="center"
-                                    android:textColor="@color/colorAccent"
+                                    android:textColor="@color/colorDarkBlueTransparent"
                                     android:textSize="18sp" />
 
                                 <ImageView
@@ -160,6 +160,7 @@
                             android:layout_weight="1"
                             android:background="@color/Transparent"
                             android:ems="10"
+                            android:hint="Set 0-10"
                             android:imeOptions="actionSend"
                             android:inputType="number"
                             android:singleLine="true"
