--- a/EasyLib_Librarian/app/src/main/res/layout-xlarge/login.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-xlarge/login.xml
@@ -86,7 +86,7 @@
         android:id="@+id/login_load_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
