--- a/EasyLib_Librarian/app/src/main/res/layout-normal/book_activity_reservation_item.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-normal/book_activity_reservation_item.xml
@@ -58,7 +58,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:visibility="invisible">
+                    android:visibility="visible">
 
                     <Button
                         android:id="@+id/book_activity_reservation_item_reserve_button"
@@ -68,7 +68,7 @@
                         android:text="Reserve"
                         android:textColor="@android:color/holo_green_light"
                         android:textSize="18sp"
-                        android:visibility="visible" />
+                        android:visibility="invisible" />
 
                     <Button
                         android:id="@+id/book_activity_reservation_item_remove_button"
@@ -78,7 +78,7 @@
                         android:text="Remove"
                         android:textColor="@android:color/holo_red_light"
                         android:textSize="18sp"
-                        android:visibility="visible" />
+                        android:visibility="invisible" />
                 </LinearLayout>
             </FrameLayout>
         </android.support.constraint.ConstraintLayout>
