--- a/EasyLib_Librarian/app/src/main/res/layout-xlarge-land/book_activity.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-xlarge-land/book_activity.xml
@@ -189,6 +189,7 @@
                         android:id="@+id/book_activity_reservations_recycler"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:overScrollMode="never"
                         android:layout_marginTop="32dp"
                         tools:listitem="@layout/book_activity_reservation_item" />
 
