--- a/EasyLib/app/src/main/res/layout-normal/fragment_calendar.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_calendar.xml
@@ -9,6 +9,21 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <TextView
+        android:id="@+id/fragment_calendar_nobooks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/round_label_gray"
+        android:text="No Books Reserved"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_calendar_recycle"
         android:layout_width="0dp"
@@ -18,6 +33,7 @@
         android:layout_marginEnd="16dp"
         android:overScrollMode="never"
         android:scrollbarSize="0dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
