--- a/EasyLib/app/src/main/res/layout-normal/fragment_calendar.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_calendar.xml
@@ -31,9 +31,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
+        android:paddingBottom="20dp"
+        android:clipToPadding="false"
         android:overScrollMode="never"
         android:scrollbarSize="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
