--- a/EasyLib/app/src/main/res/layout/fragment_home.xml
+++ b/EasyLib/app/src/main/res/layout/fragment_home.xml
@@ -5,9 +5,8 @@
     android:id="@+id/frameLayout8"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Fragments.HomeFragment">
+    tools:context=".Activities.Fragments.MainActivity">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/textView12"
         android:layout_width="0dp"
