--- a/EasyLib/app/src/main/res/layout-normal/fragment_home_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_home_item.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:background="@drawable/round_label_gray"
         android:fontFamily="serif-monospace"
         android:text="Library Name"
