[LIB] Updated BookActivity
- inserted "No Reservations" text
- refresh of #availableBooks after button press

--- a/EasyLib_Librarian/app/src/main/res/layout-xlarge-land/book_activity.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-xlarge-land/book_activity.xml
@@ -189,9 +189,21 @@
                         android:id="@+id/book_activity_reservations_recycler"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:overScrollMode="never"
                         android:layout_marginTop="32dp"
+                        android:overScrollMode="never"
+                        android:visibility="gone"
                         tools:listitem="@layout/book_activity_reservation_item" />
+
+                    <TextView
+                        android:id="@+id/book_activity_no_reservations"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="No Reservations"
+                        android:textAlignment="center"
+                        android:textSize="24sp"
+                        android:textStyle="italic"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
